# profiling_python

./: .gitignore  README.md  pyproject.toml
docs/: advanced.md  api.md  troubleshooting.md
examples/: comprehensive_demo.py  demo.py  demo_CPU.py  demo_GPU.py
profiling_py/: __init__.py  core.py  gpu.py  report.py
profiling_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
profiling_py/templates/: report.html.jinja2
tests/: test_core.py  test_report.py
